--- a/PWNB_ENTREGAS/PWNB-Semana#05/index.html
+++ b/PWNB_ENTREGAS/PWNB-Semana#05/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./login.css">
-    <title>Página de Login</title>
+    <title>Login</title>
 </head>
 <body>
     <div class="container">
@@ -19,7 +19,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <div class="form-group">
-                <input type="submit" value="Entrar">
+                <input type="submit" value="Entrar" hr>
             </div>
         </form>
     </div>
