--- a/PWNB_ENTREGAS/PWNB-Semana#14/ADO 2/tabela.html
+++ b/PWNB_ENTREGAS/PWNB-Semana#14/ADO 2/tabela.html
@@ -28,7 +28,7 @@
         <tbody id="corpoTabelaClientes">
         </tbody>
     </table>
-
+    <button class="" type="button" > <a href="index.html">voltar</a> </button>
 <script src="script.js"></script>
 </body>
 
