--- a/PWNB_ENTREGAS/PWNB-Semana#13/ADO 2/index.html
+++ b/PWNB_ENTREGAS/PWNB-Semana#13/ADO 2/index.html
@@ -48,7 +48,7 @@
        
         <div class="botoes">
             <button class="Salvar" type="button" onclick="incluirCliente()">Incluir</button>
-            <button class="" type="button" >Listar Clientes</button>
+            <button class="" type="button" > <a href="tabela.html">Listas Clientes</a> </button>
         </div>
     </form>
 <script src="script.js"></script>
